# mezon-desktop

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  deny.toml  justfile
.agents/commands/: ai-review-code.md
.github/workflows/: ci.yml
assets/i18n/: en.json  vi.json
crates/mezon-app/: Cargo.toml  build.rs
crates/mezon-app/src/: main.rs
crates/mezon-client/: Cargo.toml
crates/mezon-client/src/: abridged_tcp_adapter.rs  app_api.rs  auth.rs  lib.rs  session.rs  transport.rs  transport_adapter.rs  transport_runtime.rs
crates/mezon-i18n/: Cargo.toml
crates/mezon-i18n/src/: lib.rs
crates/mezon-native/: Cargo.toml
crates/mezon-native/src/: audio.rs  badge.rs  deep_link.rs  instance.rs  lib.rs  notifications.rs  power.rs  tray.rs
crates/mezon-proto/: Cargo.toml  build.rs
crates/mezon-proto/src/: api.proto  lib.rs  realtime.proto
crates/mezon-store/src/: channel.rs  clan.rs  lib.rs
crates/mezon-ui/: Cargo.toml
crates/mezon-ui/src/: account_test_view.rs  base_view.rs  channel_sidebar.rs  chat_area.rs  chat_layout.rs  clan_sidebar.rs  lib.rs  login_view.rs  main_layout.rs  root.rs  router.rs  settings_screen.rs  text_utils.rs  theme.rs  title_bar.rs  util.rs  view_lifecycle.rs
crates/mezon-ui/src/components/: mod.rs
crates/mezon-ui/src/components/compositions/: channel_row.rs  empty_state.rs  form_field.rs  icon_button.rs  mod.rs  otp_input.rs  section_header.rs  status_dot.rs  user_chip.rs  user_info_bar.rs
crates/mezon-ui/src/components/primitives/: avatar.rs  badge.rs  button.rs  divider.rs  label.rs  mod.rs  spinner.rs  text_input.rs
crates/mezon-ui/src/settings/: account_page.rs  activity_page.rs  advanced_page.rs  appearance_page.rs  clan_profile_section.rs  device_page.rs  language_page.rs  mod.rs  notifications_page.rs  profile_page.rs  screen.rs  voice_page.rs
docs/: 01-architecture-overview.md  02-app-startup.md  03-local-data.md  04-gpui-framework.md  05-migration-plan.md  06-auth-flow.md  07-ui-components.md  08-native-apis.md  09-gpui-internals.md  10-stubs-and-future.md  11-known-issues.md  12-testing-guide.md  13-contributing.md  14-native-deep-dive.md  15-ui-primitives-deep-dive.md  16-transport-deep-dive.md  README.md
docs/architecture/: async-architecture.md  dependency-rules.md  event-flow.md  native-integration.md  overview.md  state-management.md  workspace-layout.md
docs/conventions/: ai-contributing.md  async.md  error-handling.md  logging.md  naming.md  rust-style.md  security.md  state.md  testing.md  ui.md
docs/decisions/: ADR-template.md
docs/development/: debugging.md  release.md  setup.md  troubleshooting.md  workflow.md
