[workspace]
default-members = ["crates/mezon-app"]
members = [
    "crates/mezon-app",
    "crates/mezon-ui",
    "crates/mezon-client",
    "crates/mezon-store",
    "crates/mezon-native",
    "crates/mezon-updater",
    "crates/mezon-proto",
    # Vendored GPUI crates
    "crates/vendor/gpui",
    "crates/vendor/gpui_macros",
    "crates/vendor/gpui_shared_string",
    "crates/vendor/gpui_util",
    "crates/vendor/gpui_platform",
    "crates/vendor/gpui_macos",
    "crates/vendor/gpui_linux",
    "crates/vendor/gpui_windows",
    "crates/vendor/gpui_wgpu",
    "crates/vendor/collections",
    "crates/vendor/refineable",
    "crates/vendor/derive_refineable",
    "crates/vendor/scheduler",
    "crates/vendor/sum_tree",
    "crates/vendor/util",
    "crates/vendor/util_macros",
    "crates/vendor/http_client",
    "crates/vendor/http_client_tls",
    "crates/vendor/reqwest_client",
    "crates/vendor/media",
    "crates/vendor/ztracing",
    "crates/vendor/zlog",
    "crates/vendor/ztracing_macro",
    "crates/vendor/perf",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Mezon Team"]
license = "MIT"

[workspace.lints.rust]
unexpected_cfgs = { level = "allow" }

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"

[workspace.dependencies]
# ---------- Vendored GPUI internal crates ----------
gpui               = { path = "crates/vendor/gpui", default-features = false }
gpui_platform      = { path = "crates/vendor/gpui_platform", default-features = false }
gpui_linux         = { path = "crates/vendor/gpui_linux", default-features = false }
gpui_windows       = { path = "crates/vendor/gpui_windows", default-features = false }
gpui_wgpu          = { path = "crates/vendor/gpui_wgpu", default-features = false }
gpui_util          = { path = "crates/vendor/gpui_util" }
collections        = { path = "crates/vendor/collections" }
refineable         = { path = "crates/vendor/refineable" }
derive_refineable  = { path = "crates/vendor/derive_refineable" }
scheduler          = { path = "crates/vendor/scheduler" }
sum_tree           = { path = "crates/vendor/sum_tree" }
util               = { path = "crates/vendor/util" }
util_macros        = { path = "crates/vendor/util_macros" }
http_client        = { path = "crates/vendor/http_client" }
http_client_tls    = { path = "crates/vendor/http_client_tls" }
reqwest_client     = { path = "crates/vendor/reqwest_client" }
media              = { path = "crates/vendor/media" }
ztracing           = { path = "crates/vendor/ztracing" }
zlog               = { path = "crates/vendor/zlog" }
ztracing_macro     = { path = "crates/vendor/ztracing_macro" }
perf               = { path = "crates/vendor/perf" }

# ---------- Mezon internal crates ----------
mezon-ui      = { path = "crates/mezon-ui" }
mezon-client  = { path = "crates/mezon-client" }
mezon-store   = { path = "crates/mezon-store" }
mezon-native  = { path = "crates/mezon-native" }
mezon-proto   = { path = "crates/mezon-proto" }
mezon-updater = { path = "crates/mezon-updater" }

# ---------- Async runtime ----------
tokio                = { version = "1", features = ["full"] }
async-task           = "4.7"
async-channel        = "2.5.0"
async-compression    = { version = "0.4", features = ["bzip2", "gzip", "futures-io"] }
async-fs             = "2.1"
async-tar            = "0.5.1"
async_zip            = { version = "0.0.18", features = ["deflate", "deflate64"] }
ashpd                = { version = "0.13", default-features = false, features = ["async-io", "notification", "open_uri", "file_chooser", "settings", "trash"] }
futures              = "0.3"
futures-concurrency  = "7.7.1"
futures-lite         = "1.13"
smol                 = "2.0"
pollster             = "0.4.0"
postage              = { version = "0.5", features = ["futures-traits"] }

# ---------- Networking ----------
reqwest             = { git = "https://github.com/zed-industries/reqwest.git", rev = "c15662463bda39148ba154100dd44d3fba5873a4", default-features = false, features = ["charset", "http2", "macos-system-configuration", "multipart", "rustls-tls-native-roots", "socks", "stream"], package = "zed-reqwest", version = "0.12.15-zed" }
tokio-tungstenite   = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
http                = "1.0"
http-body           = "1.0"
serde_urlencoded    = "0.7"
bytes               = "1.0"
sha2                = "0.10"
url                 = "2.2"

# ---------- Protobuf ----------
prost                = "0.13"

# ---------- Serialization ----------
serde                = { version = "1", features = ["derive", "rc"] }
serde_json           = { version = "1", features = ["preserve_order", "raw_value"] }
serde_json_lenient   = "0.2"

# ---------- Logging ----------
tracing              = "0.1"
tracing-subscriber   = { version = "0.3", features = ["env-filter"] }
log                  = { version = "0.4.16", features = ["kv_unstable_serde", "serde"] }

# ---------- macOS platform ----------
cocoa                = "=0.26.0"
cocoa-foundation     = "=0.2.0"
core-foundation      = "=0.10.0"
core-foundation-sys  = "0.8.6"
core-video           = { version = "0.5.2", features = ["metal"] }
metal                = "0.33"
objc                 = "0.2"
objc2-app-kit        = { version = "0.3", default-features = false, features = ["NSGraphics"] }
mach2                = "0.5"
libc                 = "0.2"
windows              = { version = "0.61.3", features = [
    "Foundation_Numerics",
    "Globalization_DateTimeFormatting",
    "Storage_Search",
    "Storage_Streams",
    "System_Threading",
    "UI_ViewManagement",
    "Wdk_System_SystemServices",
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Graphics_DirectComposition",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_DirectManipulation",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Imaging",
    "Win32_Graphics_Hlsl",
    "Win32_Networking_WinSock",
    "Win32_Security",
    "Win32_Security_Credentials",
    "Win32_Security_Cryptography",
    "Win32_Storage_FileSystem",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Console",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_DataExchange",
    "Win32_System_IO",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_System_Performance",
    "Win32_System_Pipes",
    "Win32_System_RestartManager",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_System_Variant",
    "Win32_System_WinRT",
    "Win32_UI_Controls",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_Ime",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Input_Pointer",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_UI_WindowsAndMessaging",
    "Data_Xml_Dom",
    "UI_Notifications",
    # Additional features needed by mezon-native
    "Win32_System_Registry",
    "Win32_System_RemoteDesktop",
    "Win32_Media",
] }
windows-core         = "0.61.2"
windows-sys = { version = "0.61" }
# ---------- Graphics ----------
image                = "0.25.1"
wgpu                 = { git = "https://github.com/zed-industries/wgpu.git", branch = "v29", features = ["wgsl"] }
naga                 = { version = "29.0", features = ["wgsl-in"] }
resvg                = { version = "0.45.0", default-features = false }
usvg                 = { version = "0.45.0", default-features = false }
ttf-parser           = "0.25"
etagere              = "0.2"
lyon                 = "1.0"
seahash              = "4.1"

# ---------- Data / types ----------
rand                 = "0.9"
regex                = "1.5"
derive_more          = { version = "2.1.1", features = ["add", "add_assign", "deref", "deref_mut", "display", "from_str", "mul", "mul_assign", "not"] }
smallvec             = { version = "1.6", features = ["union", "const_new"] }
strum                = { version = "0.27.2", features = ["derive"] }
uuid                 = { version = "1.1.2", features = ["v4", "v5", "v7", "serde"] }
bitflags             = "2.6.0"
backtrace            = "0.3"
bytemuck             = "1"
ctor                 = "0.4.0"
inventory             = "0.3.19"
slotmap              = "1.0.6"
stacksafe            = "0.1"
parking_lot          = "0.12.1"
itertools            = "0.14.0"
web-time             = "1.1.0"
schemars             = { version = "1.0", features = ["indexmap2"] }
profiling            = "1"
chrono               = { version = "0.4", features = ["serde"] }
flume                = "0.11"
rayon                = "1.8"
heapless             = "0.9.2"
indexmap             = { version = "2.7.0", features = ["serde"] }
rustc-hash           = "2.1.0"
semver               = { version = "1.0", features = ["serde"] }

# ---------- Proc macro deps ----------
heck                 = "0.5"
proc-macro2          = "1.0"
quote                = "1.0"
syn                  = { version = "2.0", features = ["full"] }
async-trait          = "0.1"
pin-project          = "1.1.10"
waker-fn             = "1.2.0"

# ---------- Screen capture ----------
rustls              = "0.23.26"
rustls-platform-verifier = "0.5.0"
scap                 = { git = "https://github.com/zed-industries/scap", rev = "4afea48c3b002197176fb19cd0f9b180dd36eaac", default-features = false, package = "zed-scap", version = "0.0.8-zed" }

# ---------- Platform ----------
pathfinder_geometry   = "0.5"
foreign-types         = "0.5"

# ---------- Auth ----------
keyring               = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service", "crypto-openssl"] }
base64                = "0.22"

# ---------- Util ----------
anyhow                = "1"
thiserror             = "2"
dirs                  = "5"
dunce                 = "1.0"
globset               = "0.4"
percent-encoding      = "2.3.2"
unicase               = "2.6"
shlex                 = "1.3.0"
take-until            = "0.2.0"
rust-embed            = { version = "8.11", features = ["include-exclude"] }
nix                   = "0.29"
which                 = "6.0.0"
walkdir               = "2.5"
tempfile              = "3.20.0"
git2                  = { version = "0.20.1", default-features = false, features = ["vendored-libgit2"] }
num-cpus              = "1.13"
parking               = "2.0.0"
spin                  = "0.10.0"
raw-window-handle     = "0.6"
wasm-bindgen          = "0.2.113"

# ---------- Dev/test deps ----------
proptest              = { git = "https://github.com/proptest-rs/proptest", rev = "3dca198a8fef1b32e3a66f1e1897c955b4dc5b5b", features = ["attr-macro"] }
env_logger            = "0.11"
unicode-segmentation  = "1.10"
pretty_assertions      = "1.3.0"

# ---------- Build deps ----------
embed-resource        = "3.0"
bindgen               = "0.71"
cbindgen              = "0.28.0"

[profile.dev]
opt-level = 0
debug = true

[profile.dev.package.gpui_macros]
opt-level = 3
[profile.dev.package.util_macros]
opt-level = 3
[profile.dev.package.derive_refineable]
opt-level = 3
[profile.dev.package.ztracing_macro]
opt-level = 3

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
