[package]
name = "mezon-native"
version.workspace = true
edition = "2024"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
tracing.workspace = true
serde.workspace = true
tokio.workspace = true
open = "5"
mezon-updater.workspace = true
dirs = { workspace = true }
tray-icon = { version = "0.19", features = ["common-controls-v6"] }
image = { workspace = true }
auto-launch = "0.5"

[target.'cfg(target_os = "macos")'.dependencies]
objc.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
windows.workspace = true

[target.'cfg(not(any(target_os = "macos", target_os = "windows")))'.dependencies]
notify-rust = "4"
