[package]
name = "mezon-ui"
version.workspace = true
edition = "2024"

[dependencies]
gpui.workspace = true
gpui-component.workspace = true
mezon-store.workspace = true
mezon-client.workspace = true
mezon-proto.workspace = true
mezon-native.workspace = true
anyhow.workspace = true
tracing.workspace = true
serde.workspace = true
tokio.workspace = true
flume.workspace = true
